[toolbars-new] static toolbar fixes: remove border + overflow toolbar height (#3129)

--- a/packages/toolbars-new/web/src/Toolbar/ToolbarContainerNew.scss
+++ b/packages/toolbars-new/web/src/Toolbar/ToolbarContainerNew.scss
@@ -16,6 +16,9 @@
         padding: 4px 15px;
         position: static;
         min-width: fit-content;
+        border-top: none;
+        border-left: none;
+        border-right: none;
 
         &.staticContainerMobile {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
